--- a/style.html
+++ b/style.html
@@ -160,10 +160,8 @@
         /* Sidebar */
         .sidebar {
             width: var(--sidebar-width);
-            background:
-                radial-gradient(circle at 20% 20%, var(--sidebar-highlight, rgba(255, 255, 255, 0.1)) 0%, transparent 42%),
-                linear-gradient(180deg, var(--sidebar-gradient-start) 0%, var(--sidebar-gradient-end) 100%);
-            color: white;
+            background: var(--bg-color);
+            color: var(--text-color);
             height: 100vh;
             position: fixed;
             overflow-y: auto;
@@ -171,11 +169,13 @@
             z-index: 1000;
             display: flex;
             flex-direction: column;
+            border-right: 1px solid var(--border-color);
+            box-shadow: 4px 0 18px rgba(15, 23, 42, 0.08);
         }
         .sidebar-header {
             padding: 24px 20px 20px;
             text-align: center;
-            border-bottom: 1px solid rgba(255,255,255,0.1);
+            border-bottom: 1px solid color-mix(in srgb, var(--dark-color) 10%, transparent);
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -244,18 +244,18 @@
         .sidebar-menu a {
             display: block;
             padding: 12px 20px;
-            color: white;
+            color: var(--text-color);
             text-decoration: none;
             transition: all 0.3s;
             border-left: 4px solid transparent;
         }
         .sidebar-menu a:hover {
-            background-color: color-mix(in srgb, white 18%, transparent);
-            border-left-color: var(--light-color);
+            background-color: color-mix(in srgb, var(--primary-color) 12%, transparent);
+            border-left-color: var(--primary-color);
         }
         .sidebar-menu a.active {
-            background-color: color-mix(in srgb, white 22%, transparent);
-            border-left-color: var(--light-color);
+            background-color: color-mix(in srgb, var(--primary-color) 16%, transparent);
+            border-left-color: var(--primary-color);
         }
         .sidebar-menu i {
             margin-right: 10px;
@@ -266,7 +266,7 @@
         .sidebar-footer {
             margin-top: auto;
             padding: 20px;
-            border-top: 1px solid rgba(255,255,255,0.1);
+            border-top: 1px solid var(--border-color);
         }
         .sidebar-logout-button {
             width: 100%;
@@ -276,16 +276,16 @@
             gap: 10px;
             padding: 12px 16px;
             border-radius: 10px;
-            border: 1px solid rgba(255,255,255,0.2);
-            background: rgba(255,255,255,0.1);
-            color: white;
+            border: 1px solid color-mix(in srgb, var(--primary-color) 45%, var(--border-color) 55%);
+            background: color-mix(in srgb, var(--primary-color) 14%, transparent);
+            color: var(--text-color);
             font-size: 0.95rem;
             cursor: pointer;
             transition: background-color 0.3s ease, transform 0.2s ease, border-color 0.3s ease;
         }
         .sidebar-logout-button:hover {
-            background: rgba(255,255,255,0.18);
-            border-color: rgba(255,255,255,0.35);
+            background: color-mix(in srgb, var(--primary-color) 20%, transparent);
+            border-color: color-mix(in srgb, var(--primary-color) 55%, var(--border-color) 45%);
             transform: translateY(-1px);
         }
         .sidebar-logout-button i {
@@ -305,6 +305,9 @@
             padding: 20px;
             transition: all 0.3s;
             overflow-x: hidden;
+            background:
+                radial-gradient(circle at 20% 20%, var(--sidebar-highlight, rgba(255, 255, 255, 0.1)) 0%, transparent 42%),
+                linear-gradient(180deg, var(--sidebar-gradient-start) 0%, var(--sidebar-gradient-end) 100%);
         }
         /* Header */
         .header {
@@ -382,8 +385,17 @@
             outline-offset: 2px;
         }
         .theme-switcher-trigger i:first-child {
-            color: var(--primary-color);
+            color: white;
             font-size: 1.1rem;
+            background: color-mix(in srgb, var(--primary-dark) 88%, var(--primary-color) 12%);
+            padding: 8px;
+            border-radius: 10px;
+            width: 34px;
+            height: 34px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 8px 18px rgba(15, 23, 42, 0.18);
         }
         .theme-switcher-label {
             display: flex;
@@ -518,10 +530,14 @@
             padding: 10px;
             justify-content: center;
             gap: 0;
+            background: color-mix(in srgb, var(--primary-dark) 88%, var(--primary-color) 12%);
+            border-color: color-mix(in srgb, var(--primary-dark) 65%, transparent);
+            box-shadow: 0 10px 24px rgba(15, 23, 42, 0.18);
         }
         .selector-control.compact .selector-trigger {
             padding: 0;
             justify-content: center;
+            color: white;
         }
         .selector-control.compact .selector-trigger-text,
         .selector-control.compact .selector-arrow {
@@ -530,21 +546,36 @@
         .selector-control.compact .selector-icon {
             margin: 0;
             font-size: 1.05rem;
+            color: white;
         }
         .selector-control:hover {
             border-color: color-mix(in srgb, var(--primary-color) 60%, white 40%);
             box-shadow: 0 12px 28px rgba(15, 23, 42, 0.12);
             transform: translateY(-1px);
         }
+        .selector-control.compact:hover {
+            border-color: color-mix(in srgb, #ffffff 28%, var(--primary-dark) 72%);
+            box-shadow: 0 12px 28px rgba(15, 23, 42, 0.22);
+        }
         .selector-control.open,
         .selector-control:focus-within {
             border-color: var(--primary-color);
             box-shadow: 0 0 0 4px var(--focus-ring);
         }
+        .selector-control.compact.open,
+        .selector-control.compact:focus-within {
+            border-color: color-mix(in srgb, #ffffff 35%, var(--primary-dark) 65%);
+            box-shadow: 0 0 0 3px color-mix(in srgb, var(--primary-color) 45%, transparent);
+        }
         .selector-icon {
             color: var(--primary-color);
             font-size: 1.1rem;
             flex-shrink: 0;
+        }
+        .selector-control.compact .selector-icon,
+        .selector-control.compact.open .selector-icon,
+        .selector-control.compact:focus-within .selector-icon {
+            color: white;
         }
         .selector-trigger {
             flex: 1;
